ChangeLog for the Astro project.

20210815:
	* remove the GuiderDescriptor class from the Guider interface
	* rename Guider::getDescriptor() to Guider::getInstrumentName()

20210814:
	* fix initialization of CelestronMount class
	* fix API for the NiceMount
	* add north/south tracking modes to Mount device and CelestronMount
	* correctly implement east/west for CelestronMount
	* correctly implement east/west  in SimCcd, StarCamera and
	  SimGuideport

20210813:
	* change simulator implementation to just rotate the image
	* add east/west display to snowguide calibration command
	* add meridian_flipped and east members to the calibration
	* add east/west to the persistent calibration
	* add meridian_flip methods to the Ice protocol

20210812:
	* add xshift and yshift options to the transform image processing
	  element

20210811:
	* fix some typos in tools

20210810:
	* get everything back in working order
	* fix bug that we could not access the calibration database

20210630:
	* improve configure.ac detection of required libraries

20210621:
	* implement binned coordinates
	* add TopLeftRectangle class to simplify coordinate computations
	  in QHY2 driver
	* fix subrectangle condition in ImageRectangle
	* add some more exception reporting

20210620:
	* fix a bug in the qhy2 driver caused by incorrect documentation
	  of the GetQHYCCDExposureRemaining method
	* remove OSXInitQHYCCDFirmwareArray as it is no longer needed

20210611:
	* fix effective area
	* fix Bayer mosaic code for qhy2
	* mirror image vertically (different coordinate systems)
	* add offset computation for effective area
	* add OSXInitQHYCCDFirmwareArray for OSX
	* fix Qhy2Cooler class
	* add toString method to CoolerInfo

20210610:
	* increase maximum message size to accomodate large chip cameras
	* fix a bug in astroinstrument
	* new naming scheme for QHY2 CCDs
	* add a QHY2 ccd for each readout mode
	* retrieve gain from QHY2 camera

20210607: