@@ -46,13 +46,13 @@
         <property name="minimumSize">
          <size>
           <width>500</width>
-          <height>333</height>
+          <height>312</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
           <width>16777215</width>
-          <height>333</height>
+          <height>313</height>
          </size>
         </property>
        </widget>
