@@ -7,19 +7,19 @@
     <x>0</x>
     <y>0</y>
     <width>932</width>
-    <height>342</height>
+    <height>322</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>0</width>
-    <height>333</height>
+    <height>313</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>16777215</width>
-    <height>342</height>
+    <height>322</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -131,7 +131,7 @@
          <number>0</number>
         </property>
         <property name="value">
-         <double>10.000000000000000</double>
+         <double>3.000000000000000</double>
         </property>
        </widget>
       </item>
@@ -170,7 +170,7 @@
         <property name="minimumSize">
          <size>
           <width>0</width>
-          <height>70</height>
+          <height>30</height>
          </size>
         </property>
         <layout class="QGridLayout" name="gridLayout_2">
@@ -186,29 +186,10 @@
          <property name="bottomMargin">
           <number>0</number>
          </property>
-         <item row="2" column="1">
-          <widget class="QPushButton" name="raBacklashButton">
-           <property name="minimumSize">
-            <size>
-             <width>0</width>
-             <height>32</height>
-            </size>
-           </property>
+         <item row="0" column="1">
+          <widget class="QPushButton" name="moreButton">
            <property name="text">
-            <string>RA Backlash</string>
-           </property>
-          </widget>
-         </item>
-         <item row="2" column="0">
-          <widget class="QPushButton" name="decBacklashButton">
-           <property name="minimumSize">
-            <size>
-             <width>0</width>
-             <height>32</height>
-            </size>
-           </property>
-           <property name="text">
-            <string>DEC Backlash</string>
+            <string>.   .   .</string>
            </property>
           </widget>
          </item>
@@ -216,13 +197,6 @@
           <widget class="QPushButton" name="guideButton">
            <property name="text">
             <string>Guide</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="1">
-          <widget class="QPushButton" name="databaseButton">
-           <property name="text">
-            <string>Database</string>
            </property>
           </widget>
          </item>
@@ -544,7 +518,7 @@
            <x>0</x>
            <y>0</y>
            <width>350</width>
-           <height>271</height>
+           <height>251</height>
           </rect>
          </property>
         </widget>
